fix: newsletter link contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -120,7 +120,7 @@ a.nav-link,
 }
 
 .news-link {
-    color: #dd7419;
+    color: #7b3f00;
     text-decoration: none;
 }
 
